packages/build/tests/error/fixtures/fail_build_post_deploy/plugin.js
export const onEnd = function ({
  utils: {
    build: { failBuild },
  },
}) {
  failBuild('test')
}
